[package]
name = "ui-sys"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
build = "build.rs"
#links = ["usp10","gdi32","comctl32","uxtheme","msimg32","comdlg32","d2d1","dwrite","ole32","oleaut32","oleacc","uuid"]
license = "MIT/Apache 2.0"
description = "Native bindings to the minimalist, cross-platform, widget set `libui`"

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
